--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="col-3 text-center border border-dark"><span>No.2</span>
                 <!--Add Card2-->
                 <div class="card" style="width: 18rem;">
-                    <img src="https://media.4-paws.org/5/4/4/c/544c2b2fd37541596134734c42bf77186f0df0ae/VIER%20PFOTEN_2017-10-20_164-3854x2667-1920x1329.jpg" class="card-img-top" alt="...">
+                    <img src="https://media.4-paws.org/5/4/4/c/544c2b2fd37541596134734c42bf77186f0df0ae/VIER%20PFOTEN_2017-10-20_164-3854x2667-1920x1329.jpg" class="card-img-top" alt="Tiger">
                     <div class="card-body">
                       <h5 class="card-title">Tiger</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -44,8 +44,21 @@
             </div>
             <!--End C2R1-->
 
+            <!--Add C3R1-->
+            <div class="col-3 bg-dark"><span class="text-white">No.3</span>
+                <!--Add Card3-->
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://www.treehugger.com/thmb/tKe5Rn214X_AXAE-kRUbiu7pOuo=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/front-view-of-a-bull-elephant-in-the-grasslands-of-amboseli-national-park--1219745751-08f3add138514ad091e82e29a11546cc.jpg" class="card-img-top" alt="Elephant">
+                        <div class="card-body  bg-dark text-white">
+                        <h5 class="card-title text-white">Elephant</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="https://www.treehugger.com/thmb/tKe5Rn214X_AXAE-kRUbiu7pOuo=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/front-view-of-a-bull-elephant-in-the-grasslands-of-amboseli-national-park--1219745751-08f3add138514ad091e82e29a11546cc.jpg" target="_blank" class="btn btn-primary">Full Image</a>
+                        </div>
+                    </div>
+                <!--End Card3-->
+            </div>
+            <!--END C3R1-->
             
-            <div class="col-3 bg-dark text-white text-center"><span>No.3</span></div>
             <div class="col-3 text-center border border-dark"><span>No.4</span></div>
         </div>
     <!--End column 3*3*3*3 -->
