--- a/index.html
+++ b/index.html
@@ -74,7 +74,73 @@
             </div>
             <!--End C4R1-->
         </div>
-    <!--End column 3*3*3*3 -->
+        <!--End Row 1 -->
+        
+        <!--ADD Row2-->
+        <div class="row">
+            <!--Add C1R2-->
+            <div class="col-3 bg-dark"><span class="text-white">No.5</span>
+                <!--Add Card1-->
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1577114995803-d8ce0e2b4aa9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1773&q=80" class="card-img-top" alt="Giraffe">
+                        <div class="card-body  bg-dark text-white">
+                        <h5 class="card-title text-white">Giraffe</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="https://images.unsplash.com/photo-1577114995803-d8ce0e2b4aa9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1773&q=80" target="_blank" class="btn btn-primary">Full Image</a>
+                        </div>
+                    </div>
+                <!--End Card1-->
+            </div>
+            <!--END C1R1-->
+
+            <!--Add C2R1-->
+            <div class="col-3 text-center border border-dark"><span>No.6</span>
+                <!--Add Card2-->
+                <div class="card" style="width: 18rem;">
+                    <img src="https://images.unsplash.com/photo-1574007477600-91e318b24ccf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" class="card-img-top" alt="Wolf">
+                    <div class="card-body">
+                      <h5 class="card-title">Wolf</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="https://images.unsplash.com/photo-1574007477600-91e318b24ccf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" target="_blank" class="btn btn-primary">Full Image</a>
+                    </div>
+                </div>
+                <!--End Card2-->
+            </div>
+            <!--End C2R2-->
+
+            <!--Add C3R2-->
+            <div class="col-3 bg-dark"><span class="text-white">No.7</span>
+                <!--Add Card3-->
+                    <div class="card" style="width: 18rem;">
+                        <img src="https://images.unsplash.com/photo-1605132410660-f388de10e778?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1822&q=80" class="card-img-top" alt="Leopard">
+                        <div class="card-body  bg-dark text-white">
+                        <h5 class="card-title text-white">Leopard</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="https://images.unsplash.com/photo-1605132410660-f388de10e778?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1822&q=80" target="_blank" class="btn btn-primary">Full Image</a>
+                        </div>
+                    </div>
+                <!--End Card3-->
+            </div>
+            <!--END C3R2-->
+
+            <!--Add C4R2-->
+            <div class="col-3 text-center border border-dark"><span>No.8</span>
+                <!--Add Card4-->
+                <div class="card" style="width: 18rem;">
+                    <img src="https://images.unsplash.com/photo-1546146020-c84c6bf355bf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1771&q=80" class="card-img-top" alt="Gorilla">
+                    <div class="card-body">
+                      <h5 class="card-title">Gorilla</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="https://images.unsplash.com/photo-1546146020-c84c6bf355bf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1771&q=80" target="_blank" class="btn btn-primary">Full Image</a>
+                    </div>
+                </div>
+                <!--End Card4-->
+            </div>
+            <!--End C4R2-->
+        </div>
+        <!--End Row 2 -->
+
+    </div>
 
     
 </div>
